# taskotter

./: .gitignore  .prettierignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: contract-compatibility.yml
contracts/: README.md  compatibility-matrix.json
contracts/fixtures/: agent-result-import.github-pr.json  agent-result-import.invalid-sensitive-oversized.json  agent-result-import.manual.json  audit-chain.synthetic-correlation-run.json  audit-event.high-risk-runtime-denied.json  audit-event.policy-denied.json  gateway-relay-events.json  policy-composition.matrix.json  (+17 more)
crates/taskotter-control-plane/: Cargo.toml
crates/taskotter-control-plane/fixtures/: intake.github-issue.json
crates/taskotter-control-plane/src/: agent_result.rs  api.rs  audit.rs  authorization.rs  domain.rs  gateway_relay.rs  intake.rs  lib.rs  main.rs  operations.rs  policy.rs  protected_operations.rs  review_control.rs  review_time.rs  runner.rs  usage.rs
docs/: i18n-architecture.md  i18n-qa-e2e-matrix.md  integration-assisted-setup-ux-spec.md  localization-release-readiness.md  module-boundaries.md  operations-run-surfaces.md  review-control-prototype-qa-scenarios.md  review-packet-eval-harness.md  review-time-telemetry.md
scripts/: check-contract-compatibility.mjs  check-file-size.sh  check-hardcoded-ui-strings.mjs  check-module-boundaries.mjs  generate-contracts.mjs
src/: App.test.tsx  App.tsx  serverMessages.test.ts  serverMessages.ts  styles.css
(+51 files in other folders)
