[package]
name = "taskotter-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3.44", features = ["parsing"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }

[lints]
workspace = true
